...
                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qmf-er-okv">
                                        <rect key="frame" x="0.0" y="104" width="800" height="80"/>
                                        <accessibility key="accessibilityConfiguration" identifier="createRoomButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="80" id="y8D-y9-9KK"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M5L-Bq-7gP">
                                        <rect key="frame" x="0.0" y="214" width="800" height="80"/>
                                        <accessibility key="accessibilityConfiguration" identifier="joinRoomButton"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="80" id="KU2-3g-Wf6"/>
...
                                <rect key="frame" x="306" y="30" width="200" height="294"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Team Code" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Jv-SI-Kq4">
                                        <rect key="frame" x="0.0" y="0.0" width="200" height="0.0"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="30" translatesAutoresizingMaskIntoConstraints="NO" id="3BX-fr-kSS">
                                        <rect key="frame" x="0.0" y="30" width="200" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="teamCodeTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="MQX-b5-eCd"/>
...
                                    <button opaque="NO" contentMode="scaleAspectFit" ambiguous="YES" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FtR-Rh-iSH">
                                        <rect key="frame" x="0.0" y="110" width="200" height="184"/>
                                        <accessibility key="accessibilityConfiguration" identifier="joinButton"/>
                                        <state key="normal" image="button_joinroom"/>
                                        <connections>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NWI-yc-x0u">
                                <rect key="frame" x="74.000000000000014" y="30" width="165.33333333333337" height="58"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <state key="normal" image="button_back"/>
                                <connections>
...
                                    <inset key="sectionInset" minX="30" minY="0.0" maxX="0.0" maxY="0.0"/>
                                </collectionViewFlowLayout>
                                <imageView key="backgroundView" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="bottomLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="package_site" id="URT-oX-Bnv">
                                    <rect key="frame" x="0.0" y="0.0" width="724" height="70"/>
                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <subviews>
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="add_blue" translatesAutoresizingMaskIntoConstraints="NO" id="Ecd-ma-hza">
                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                                </imageView>
...
                                <rect key="frame" x="352.66666666666669" y="271" width="107" height="48"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <state key="normal" title="Proceed"/>
                                <connections>
                                    <action selector="proceed:" destination="MLN-lP-Xqv" eventType="touchUpInside" id="2rc-qD-I4e"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="anY-5e-9Gb">
                                <rect key="frame" x="618" y="30" width="120" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="startButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="120" id="5lM-Ub-iB3"/>
...
                                <rect key="frame" x="666" y="30" width="116" height="42"/>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="To Packing"/>
                                <connections>
                                    <action selector="handleReturnToPackingView:" destination="7Wf-ZL-3wu" eventType="touchUpInside" id="Qcb-h6-hYM"/>
...
