...
        guard let roundNumber = gameController?.game?.currentRoundNumber else {
            return
        }
        
        let message: String
        if roundNumber == 0 {
            message = "Are you ready for Day 1?"
        } else {
            message = "Day \(roundNumber) has just ended! Are you ready for Day \(roundNumber + 1)?"
        }
        
        newDayLabel.text = message
    }
...
